2004-04-16  Ravindra <rkumar@novell.com>

	* Pen.cs: GC should be allowed to collect any pen including
	system pens.
	* SolidBrush.cs: GC should be allowed to collect any SolidBrush
	including system brushes.
	* Brushes.cs: Coding style.
	* Pens.cs: Objects created by Pens are not modifiable on
	MS.NET, so we are now. Also, coding style fixes.
	* SystemPens.cs: Removed static constructor and changed file
	format dos2unix.
	* SystemBrushes.cs: Some cosmetic changes.

2004-04-15  Sanjay Gupta <gsanjay@novell.com>
	* Icon.cs: Implemented more missing bits and fixed the problem
		of icon not getting saved in proper format

2004-04-14  Sanjay Gupta <gsanjay@novell.com>
	* Icon.cs: Implemented more missing bits

2004-04-13  Sanjay Gupta <gsanjay@novell.com>
	* Icon.cs: Implemented few more missing bits

2004-04-12  Sanjay Gupta <gsanjay@novell.com>
	* Icon.cs: Implemented first version

2004-04-11  Peter Bartok <pbartok@novell.com>
   * Font.cs: Implemented Font.ToHfont method; used Jordi's suggestion of splitting
   the code and using our own private gdiplus function when on Unix and using Win32
   functions when running on Windows
   * gdipStructs.cs: Added LOGFONTA structure
   * gdipFunctions.cs: Added various DllImports required for Font.ToHfont

2004-04-10  Vladimir Vukicevic  <vladimir@pobox.com>

	* Image.cs: Save should use encoder.FormatID, not Clsid

2004-04-06  Jordi Mas i Hernandez <jordi@ximian.com>
	* Region.cs: fixes GdipCombineRegionRect and GdipCombineRegionRectI signature
	* gdipFunctions.cs: fixes GdipCombineRegionRect and GdipCombineRegionRectI signature

2004-04-06  Duncan Mak  <duncan@ximian.com>

	* gdipFunctions.cs (GdipCreatePath2): Fixed signature.

2004-04-06  Jordi Mas i Hernandez <jordi@ximian.com>
	* Region.cs: fixes GetRegionScans
	* gdipFunctions.cs: fixes GetRegionScans

2004-04-06  Vladimir Vukicevic  <vladimir@pobox.com>

	* gdipFunctions.cs: Added stream delegate helpers for
	stream loading/saving on linux
